# 3F2N

./: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
CmakeExample/: 0001.exr  demo.cpp
PythonExample/: demo.py
cmake/: .gitignore  TFTNConfig.cmake.in
cuda/: .gitignore  CMakeLists.txt
cuda/src/: .CMakeLists.txt.swp  CMakeLists.txt  main.cu  stdafx.h
data/android/: params.txt
example/: demo.cpp
include/3f2n+/: 3f2n+.h
include/3rdmethod/: 3rd_algorithm.cpp  3rd_algorithm.h
include/csne/: core.cpp  csne_easy_read.h  csne_fast.h  csne_no_use.h
include/dhsne/: dhsen_easy_read.h  dhsen_fast.h
include/tftn/: tftn.cpp  tftn.h
include/utility/: FastMath.hpp  tftnp_io.hpp  tictoc.hpp
pybind11/: py_reader.cpp
test/: CMakeLists.txt  dataset_3f2n.cpp  tftnp_test_tranditional.cpp
